[package]
name = "rust-tutorial"
version = "0.1.0"
authors = ["Ian Lumsden <lumsden.ian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"

[[bin]]
name = "iterator-wordcount"
path = "wordcount.rs"
